# go-bazel-monorepo

./: BUILD.bazel  README.md  bazel-bin  bazel-me  bazel-out  bazel-testlogs  deps.bzl  go.mod
services/servicea/: BUILD.bazel  main.go  main_test.go
services/serviceb/: BUILD.bazel  main.go
services/serviceb/internal/utils/: BUILD.bazel  utils.go  utils_test.go
