load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "servicea_lib",
    srcs = ["main.go"],
    importpath = "github.com/mohammadVatandoost/go-bazel-monorepo/services/servicea",
    visibility = ["//visibility:private"],
    deps = ["@com_github_sirupsen_logrus//:logrus"],
)

go_binary(
    name = "servicea",
    embed = [":servicea_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "servicea_test",
    srcs = ["main_test.go"],
    embed = [":servicea_lib"],
)
